<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkishgreen"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_plan_name"
        android:textSize="16sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/teal_700"
        android:layout_margin="20dp"
        />

    <EditText
        android:id="@+id/plan_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:inputType="textAutoComplete"
        android:theme="@style/numberpicker"
        android:layout_margin="20dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/positive_button_done"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/set"
            android:textColor="@color/teal_200"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            />
        <Button
            android:id="@+id/negative_button_done"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/teal_200"
            android:text="@string/cancel"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            />
    </LinearLayout>



</LinearLayout>